force-app/main/default/objects/OnBoarding_Journey__c/OnBoarding_Journey__c.object-meta.xml
<CustomObject>
    <label>OnBoarding Journey</label>
    <nameField>
        <label>OnBoarding Journey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnBoarding Journeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>