force-app/main/default/objects/OnBoarding_Journey__c/fields/Assets_Items__c.field-meta.xml
<CustomField>
    <fullName>Assets_Items__c</fullName>
    <label>Assets Items</label>
    <type>TextArea</type>
</CustomField>