force-app/main/default/objects/OnBoarding_Journey__c/fields/Assets_Provided__c.field-meta.xml
<CustomField>
    <fullName>Assets_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assets Provided</label>
    <type>Checkbox</type>
</CustomField>