force-app/main/default/objects/OnBoarding_Journey__c/fields/Background_Verification__c.field-meta.xml
<CustomField>
    <fullName>Background_Verification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Background Verification</label>
    <referenceTo>Background_Verification__c</referenceTo>
    <relationshipLabel>OnBoarding Journeys</relationshipLabel>
    <relationshipName>OnBoarding_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>