force-app/main/default/objects/OnBoarding_Journey__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>OnBoarding Journeys</relationshipLabel>
    <relationshipName>OnBoarding_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>