force-app/main/default/objects/OnBoarding_Journey__c/fields/Documents_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Documents_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents Submitted</label>
    <type>Checkbox</type>
</CustomField>