force-app/main/default/objects/OnBoarding_Journey__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OnBoarding Journeys (Employee)</relationshipLabel>
    <relationshipName>OnBoarding_Journeys1</relationshipName>
    <type>Lookup</type>
</CustomField>