force-app/main/default/objects/OnBoarding_Journey__c/fields/Interview_Journey__c.field-meta.xml
<CustomField>
    <fullName>Interview_Journey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Journey</label>
    <referenceTo>Interview__c</referenceTo>
    <relationshipLabel>OnBoarding Journeys</relationshipLabel>
    <relationshipName>OnBoarding_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>