force-app/main/default/objects/OnBoarding_Journey__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POC</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OnBoarding Journeys</relationshipLabel>
    <relationshipName>OnBoarding_Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>