force-app/main/default/objects/OnBoarding_Journey__c/fields/Team_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Team_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Team Assigned</label>
    <type>Checkbox</type>
</CustomField>