force-app/main/default/objects/OnBoarding_Journey__c/listViews/OnBoarding_Journey_Queue_OnBoarding_Journey.listView-meta.xml
<ListView>
    <fullName>OnBoarding_Journey_Queue_OnBoarding_Journey</fullName>
    <filterScope>Queue</filterScope>
    <label>OnBoarding Journey Queue</label>
    <queue>OnBoarding_Journey_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>